# Omstir

./: .gitmodules  CMakeLists.txt  README.md  link_folders.bat  setup.bat
RenderPasses/: CMakeLists.txt
RenderPasses/RefPathTracer/: CMakeLists.txt  RefPathTracer.cpp  RefPathTracer.h  RefPathTracer.rt.slang
app/omstir/data/: settings.ed
scripts/: RefPathTracer.py
src/: CMakeLists.txt  log.cpp  log.h  main.cpp  types.h
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  assert.cpp  assert.h  log.cpp  log.h  settings.cpp  settings.h  time.cpp  time.h  types.h  window.cpp  window.h
src/core/data/: CMakeLists.txt  custom_type_registry.h  ed.cpp  ed.h  types.h  utils.cpp  utils.h
src/core/data/parser/: generate.bat  lex.yy.cpp  parser.cpp  parser.h  parser.l  parser.tab.cpp  parser.tab.hpp  parser.y
src/core/input/: CMakeLists.txt  input_router.cpp  input_router.h
src/core/input/drivers/: buttons.h  drivers.cpp  drivers.h  keyboard.h  pointer.h
src/core/input/drivers/windows/: win_keyboard.cpp  win_keyboard.h  win_mouse.cpp  win_mouse.h
src/core/utils/: CMakeLists.txt  bit_capacity.hpp  bits.h  fs.cpp  fs.h  hash.h  ranges.hpp  resizable_vector.hpp  string.cpp  string.h  string_map.cpp  string_map.h
src/core/vfs/: CMakeLists.txt  file_watcher.cpp  file_watcher.h  vfs.cpp  vfs.h
